--- a/style.css
+++ b/style.css
@@ -8,47 +8,109 @@ body{
     margin: 0%; 
 }
 .container{
-    display: flex;
-} 
-h1{
-    font-size: 40px;
-    
+    margin-bottom: 70px;
 }
 .half-width{
-    width: 50%;
-    padding-left: 2px;
-    background-color: blue;
+    display: grid;
+    background-color: #2D25A0;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    height: 677px;
+    padding: 50px;
+
+}
+.titel h1:hover{
+    cursor: pointer;
+}
+.titel h1{
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 64px;  
+    line-height: 80px;
     
-}
-.half-width img{
-    width: 70%;
-}
-.link-button{
-text-decoration: none;
-background-color: #E02C6D;
-padding: 10px 24px 10px 24px;
-color: wheat;
 }
 
+.banner-image img{
+    width: 556px;
+    height: 438px;
+    transition: trnasform 1500ms  ease-in-out;
+}
+.banner-image img:hover{
+    transform: rotate(90deg) skew(-20deg);
+}
+.link-button{
+    color: #ffffff;
+    background-color: #E02C6D;
+    padding: 10px 24px;
+    text-decoration: none;
+    font-weight: 500;
+    line-height: 24px
+}
+#right-arrow{
+    margin-left: 8px;
+}
 /* Player style */
-.flex-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit ,minmax(400px,1fr));
-    
-    grid-gap: 10px;
-    
-}
+
 .players{
-    width: 90%;
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 1px 2px  4px;
-    padding-left: 50px;
-    padding-right: 50px;
+    display: grid;
+   grid-template-columns: repeat(3,1fr);
+   grid-column-gap: 30px;
+    grid-row-gap: 27px;
+    grid-auto-rows: minmax(600px, auto);
+    margin: 3% 10%;
 }
-.players img{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 5px;
+.player{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    box-shadow: 0 0 40px 0 rgb(0,0,0,0.15);
+    margin-left: 0 15px;
+}
+.player-image img{
+    height: 256px;
+    width: 300px;
+    padding: 15px;
+}
+.player-info h2{
+      font-size: 28px;
+      font-weight: 700px;
+}
+
+/* highlight style*/
+ 
+ .contents{
+     display: grid;
+     grid-template-columns: repeat(2,1fr);
+     align-items: center;
+     height: 677px;
+     padding: 50px;
+ }
+ .description h1{
+     font-size: 48px;
+     line-height: 60px;
+     margin-bottom: 24px;
+    
+ }
+.highlights-image img{
+    width: 90%;
+    height: 427px;
+}
+
+/* footer */
+.footer{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 30px;
+    
+}
+.social-links{
+    text-align: center;
+
+}
+.logo img{
+  
+    width: 400px;
 }
