--- a/style.css
+++ b/style.css
@@ -97,6 +97,11 @@ body{
     height: 427px;
 }
 
+.match-link{
+    text-align: center;
+    
+}
+
 /* footer */
 .footer{
      display: flex;
@@ -108,9 +113,64 @@ body{
 }
 .social-links{
     text-align: center;
-
+    font-size: 32px;
+    margin: 20px 14px;
+    color: blueviolet;
 }
 .logo img{
+  width: 400px;
+  height: 110px;
   
-    width: 400px;
 }
+
+@media only screen and (max-width: 768px) {
+    .container{
+        margin-bottom: 47px;
+    }
+    .banner-area{
+        width: 100%;
+    }
+    .banner{
+        height: 695px;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 47px;
+        grid-row-gap: 24px;
+
+    }
+    .title h1{
+        font-size: 50px;
+        line-height: 36px;
+        margin-left: 16px;
+    }
+    .banner-image img{
+        width: 330px;
+        height: 260px;
+    }
+    .players{
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 24px;
+    }
+    .player{
+        padding: 16px;
+    }
+    .player-image img{
+        height: 100%;
+        width: 94%;
+        padding: 15px
+    }
+    .player-info{
+        padding: 15px;
+    }
+    .highlights{
+        height: 677px;
+    }
+    .highlights-image img{
+        width: 100%;
+        height: 100%;
+        margin: 30px 0;
+    }
+    .rank{
+        margin-top: 300px;
+    }
+}
+
